crates/lune-ui/tests/snapshots/snapshot_widgets__diff_view_empty.snap
---
source: crates/lune-ui/tests/snapshot_widgets.rs
assertion_line: 549
expression: buffer_to_text(&buf)
---
 No diff to display
