crates/lune-ui/tests/snapshots/snapshot_widgets__diff_view_side_by_side.snap
---
source: crates/lune-ui/tests/snapshot_widgets.rs
assertion_line: 537
expression: buffer_to_text(&buf)
---
 src/main.rs
@@ -1,5 +1,6 @@                        │@@ -1,5 +1,6 @@
fn main() {                            │fn main() {
    println!("old");                   │    println!("new");
                                       │    println!("extra");
    let x = 42;                        │    let x = 42;
}                                      │}
@@ -10,3 +11,4 @@                      │@@ -10,3 +11,4 @@
fn helper() {                          │fn helper() {
                                       │    // TODO: implement
}                                      │}
