crates/lune-ui/tests/snapshots/snapshot_widgets__editor_pane_welcome.snap
---
source: crates/lune-ui/tests/snapshot_widgets.rs
expression: buffer_to_text(&buf)
---






                        Lune Editor

                 Open a file to get started

                  Ctrl+P  Command Palette
                  Ctrl+B  Toggle File Tree
                 Ctrl+`  Toggle Agents Tab
                        Ctrl+Q  Quit
