crates/lune-ui/tests/snapshots/snapshot_widgets__editor_pane_with_content.snap
---
source: crates/lune-ui/tests/snapshot_widgets.rs
expression: buffer_to_text(&buf)
---
──────────────────────────────────────────────────
1 fn main() {
2     println!("Hello");
3 }
4
~
~
~
~
──────────────────────────────────────────────────
