crates/lune-ui/tests/snapshots/snapshot_widgets__file_tree_empty.snap
---
source: crates/lune-ui/tests/snapshot_widgets.rs
expression: buffer_to_text(&buf)
---
╭ my-project ────────────────╮
│                            │
│                            │
│                            │
│          No files          │
│                            │
│                            │
╰────────────────────────────╯
