crates/lune-ui/tests/snapshots/snapshot_widgets__file_tree_unfocused.snap
---
source: crates/lune-ui/tests/snapshot_widgets.rs
assertion_line: 416
expression: buffer_to_text(&buf)
---
 lune-editor                 ╮
▼ src                        │
    main.rs M                │
    lib.rs                   │
    utils.rs A               │
▶ tests                      │
  Cargo.toml ?               │
  README.md                  │
                             │
                             ╯
