crates/lune-ui/tests/snapshots/snapshot_widgets__git_panel_empty.snap
---
source: crates/lune-ui/tests/snapshot_widgets.rs
expression: buffer_to_text(&buf)
---
╭ SOURCE CONTROL ─────────────────╮
│                                 │
│                                 │
│                                 │
│      Not a git repository       │
│                                 │
│                                 │
╰─────────────────────────────────╯
