crates/lune-ui/tests/snapshots/snapshot_widgets__git_panel_unfocused.snap
---
source: crates/lune-ui/tests/snapshot_widgets.rs
assertion_line: 607
expression: buffer_to_text(&buf)
---
╭ SOURCE CONTROL
│ Staged Changes (2)
│ M src/main.rs
│ A src/new_file.rs
│ Changes (2)
│ M src/lib.rs
│ U temp.txt
│
│
│
│
╰
